--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "vue": "^2.5.17"
   },
   "devDependencies": {
+    "@vue/cli": "^3.2.1",
     "@vue/cli-plugin-babel": "^3.1.1",
     "@vue/cli-plugin-eslint": "^3.1.5",
     "@vue/cli-service": "^3.1.4",
     "babel-eslint": "^10.0.1",
+    "es6-promise": "^4.2.5",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
     "vue-router": "^3.0.2",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.5.17",
+    "vuex": "^3.0.1"
   },
   "eslintConfig": {
     "root": true,
@@ -29,8 +32,7 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {
-    },
+    "rules": {},
     "parserOptions": {
       "parser": "babel-eslint"
     }
